paid/force-app/main/default/objects/PAID_API_Configuration__mdt/PAID_API_Configuration__mdt.object-meta.xml
<CustomObject>
    <label>PAID API Configuration</label>
    <pluralLabel>PAID API Configurations</pluralLabel>
</CustomObject>