paid/force-app/main/default/objects/PAID_API_Configuration__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Is this configuration active?</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>