paid/force-app/main/default/objects/PAID_API_Configuration__mdt/fields/Endpoint_Path__c.field-meta.xml
<CustomField>
    <fullName>Endpoint_Path__c</fullName>
    <description>API path (e.g., /customers)</description>
    <label>Endpoint Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>