paid/force-app/main/default/objects/PAID_API_Configuration__mdt/fields/Named_Credential__c.field-meta.xml
<CustomField>
    <fullName>Named_Credential__c</fullName>
    <description>Named Credential name</description>
    <label>Named Credential</label>
    <length>255</length>
    <type>Text</type>
</CustomField>